--- a/WindowsFormsLigueScrabble/WindowsFormsLigueScrabble.csproj
+++ b/WindowsFormsLigueScrabble/WindowsFormsLigueScrabble.csproj
@@ -115,6 +115,13 @@
     <Compile Include="Joueur.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rencontre.cs" />
+    <Compile Include="RencontreForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RencontreForm.Designer.cs">
+      <DependentUpon>RencontreForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="JoueurForm.resx">
       <DependentUpon>JoueurForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -130,6 +137,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RencontreForm.resx">
+      <DependentUpon>RencontreForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
