--- a/WindowsFormsLigueScrabble/WindowsFormsLigueScrabble.csproj
+++ b/WindowsFormsLigueScrabble/WindowsFormsLigueScrabble.csproj
@@ -98,6 +98,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EditionRencontreForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditionRencontreForm.Designer.cs">
+      <DependentUpon>EditionRencontreForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="JoueurForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,6 +119,7 @@
       <DependentUpon>Console_Accueil_Form.cs</DependentUpon>
     </Compile>
     <Compile Include="Joueur.cs" />
+    <Compile Include="LienTableSession.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rencontre.cs" />
@@ -122,6 +129,10 @@
     <Compile Include="RencontreForm.Designer.cs">
       <DependentUpon>RencontreForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="RencontresDataGrid.cs" />
+    <EmbeddedResource Include="EditionRencontreForm.resx">
+      <DependentUpon>EditionRencontreForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="JoueurForm.resx">
       <DependentUpon>JoueurForm.cs</DependentUpon>
     </EmbeddedResource>
