--- a/WindowsFormsLigueScrabble/WindowsFormsLigueScrabble.csproj
+++ b/WindowsFormsLigueScrabble/WindowsFormsLigueScrabble.csproj
@@ -98,6 +98,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DonneesRencontre.cs" />
     <Compile Include="EditionRencontreForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,7 +120,9 @@
       <DependentUpon>Console_Accueil_Form.cs</DependentUpon>
     </Compile>
     <Compile Include="Joueur.cs" />
+    <Compile Include="LiensSessionTablePartie.cs" />
     <Compile Include="LienTableSession.cs" />
+    <Compile Include="Partie.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rencontre.cs" />
@@ -130,6 +133,7 @@
       <DependentUpon>RencontreForm.cs</DependentUpon>
     </Compile>
     <Compile Include="RencontresDataGrid.cs" />
+    <Compile Include="Table.cs" />
     <EmbeddedResource Include="EditionRencontreForm.resx">
       <DependentUpon>EditionRencontreForm.cs</DependentUpon>
     </EmbeddedResource>
