--- a/WindowsFormsLigueScrabble/WindowsFormsLigueScrabble.csproj
+++ b/WindowsFormsLigueScrabble/WindowsFormsLigueScrabble.csproj
@@ -123,6 +123,12 @@
     <Compile Include="LiensSessionTablePartie.cs" />
     <Compile Include="LienTableSession.cs" />
     <Compile Include="Partie.cs" />
+    <Compile Include="PartieForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PartieForm.Designer.cs">
+      <DependentUpon>PartieForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rencontre.cs" />
